--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   </head>
   <body>
     <h1>Welcome to My Sample Website</h1>
-    <img src="image.jpg" alt="My Image">
+    <img src="image.png" alt="My Image">
   </body>
 </html>
