--- a/index.html
+++ b/index.html
@@ -2,9 +2,28 @@
 <html>
   <head>
     <title>My Sample Website</title>
+    <style>
+      /* Add some styles to the page */
+      body {
+        font-family: Arial, sans-serif;
+        text-align: center;
+        background-color: #f2f2f2;
+      }
+      h1 {
+        color: #333;
+        margin: 50px 0;
+      }
+      img {
+        width: 50%;
+        border: 5px solid #333;
+        border-radius: 10px;
+        margin: 50px 0;
+      }
+    </style>
   </head>
   <body>
     <h1>Welcome to My Sample Website</h1>
     <img src="image.png" alt="My Image">
   </body>
 </html>
+
