--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My Sample Website</title>
+    <title>Elham Hashir</title>
     <style>
       /* Add some styles to the page */
       body {
@@ -10,8 +10,14 @@
         background-color: #f2f2f2;
       }
       h1 {
-        color: #333;
+        color: pink;
+        width: 100%;
+        font-size: 60px;
+        font-style: italic;
         margin: 50px 0;
+        border: 5px solid rgba(0, 0, 0, 0.1);
+        border-radius: 10px;
+        
       }
       img {
         width: 50%;
@@ -22,8 +28,7 @@
     </style>
   </head>
   <body>
-    <h1>Welcome to My Sample Website</h1>
+     <h1>Cherished Memories!!</h1>
     <img src="image.png" alt="My Image">
   </body>
 </html>
-
