--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
           <li><a href="./index.html" title="">Home</a></li>
           <li><a href="./project.html" title="">Gallery</a></li>
           <li><a href="./about.html" title="">About me</a></li>
-          <li><a href="./components.html" title="">Components</a></li>
-        </ul>
+                  </ul>
 
         <div class="footer-container">
            
@@ -62,7 +61,7 @@
 </header>
 
   
-<div class="hero-full-container background-image-container white-text-container" style="background-image:url('./image.png')">
+<div class="hero-full-container background-image-container white-text-container" style="background-image:url('./image.jpg')">
   <div class="overlay-gradient"></div>
   <div class="container">
     <div class="row">
