--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
         <div class="row">
             <div class="col-xs-12">
                 <div class="col-md-6">
-                    <img src="./assets/images/img-profil.jpg" class="img-responsive" alt=""> 
+                    <img src="./image1.png" class="img-responsive" alt=""> 
                 </div>
                 <div class="col-md-6">
                     <h1 class="h2">Elham Hashir</h1>
