--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <button type="button" class="close" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         <ul class="navbar-fullscreen-links">
           <li><a href="./index.html" title="">Home</a></li>
-          <li><a href="./project.html" title="">Gallery</a></li>
+          <li><a href="./gallery.html" title="">Gallery</a></li>
           <li><a href="./about.html" title="">About me</a></li>
                   </ul>
 
