--- a/index.html
+++ b/index.html
@@ -16,6 +16,33 @@
   <link href="./assets/favicon.ico" rel="icon">
   
   <title>Title page</title>  
+  <style>
+    p {
+    font-size: 14px;
+    transition: font-size 0.9s ease;
+    }
+
+    p:hover {
+    font-size: 18px;
+    }
+    h1 {
+    transition: font-size 0.3s ease;
+    }
+
+    h1:hover {
+    font-size: 60px;
+    }
+    a {
+    font-size: 14px;
+    transition: font-size 0.5s ease;
+    }
+
+    a:hover {
+    font-size: 30px;
+    }    
+    
+    
+  </style>
 
 <link href="./main.3da94fde.css" rel="stylesheet"></head>
 
