--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 </header>
 
   
-<div class="hero-full-container background-image-container white-text-container" style="background-image:url('./image.jpg')">
+<div class="hero-full-container background-image-container white-text-container" style="background-image:url('./image.png')">
   <div class="overlay-gradient"></div>
   <div class="container">
     <div class="row">
