--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
     }
 
     p:hover {
-    font-size: 18px;
+      color: black;
+    font-size: 25px;
     }
     h1 {
     transition: font-size 0.3s ease;
@@ -33,12 +34,12 @@
     font-size: 60px;
     }
     a {
-    font-size: 14px;
+    font-size: 30px;
     transition: font-size 0.5s ease;
     }
 
     a:hover {
-    font-size: 30px;
+    font-size: 50px;
     }    
     
     
