--- a/gallery.html
+++ b/gallery.html
@@ -60,17 +60,14 @@
     <div class="gallery">
       <div>
         <img src="image.jpg" alt="Image 1">
-        <p class="caption">Image 1</p>
-        <p class="description">Description for Image 1</p>
+         <p class="description">Description for Image 1</p>
       </div>
       <div>
         <img src="image1.png" alt="Image 2">
-        <p class="caption">Image 2</p>
         <p class="description">Description for Image 2</p>
       </div>
       <div>
-        <img src="image3.jpg" alt="Image 3">
-        <p class="caption">Image 3</p>
+        <img src="i.jpg" alt="Image 3">
         <p class="description">Description for Image 3</p>
       </div>
       <!-- Add more images as needed -->
