--- a/gallery.html
+++ b/gallery.html
@@ -107,6 +107,182 @@
         <p class="description">"Baby grins and sunshine."</p>
       </div>
       <!-- Add more images as needed -->
+      <div>
+        <img src="./images/1.jpg" alt="Image 1">
+         <p class="description">"Baby boss in the chair."</p>
+      </div>
+      <div>
+        <img src="./images/2.jpg" alt="Image 1">
+         <p class="description">"Baby boss in the chair."</p>
+      </div>
+      <div>
+        <img src="./images/3.jpg" alt="Image 1">
+         <p class="description">"Baby boss in the chair."</p>
+      </div>
+      <div>
+        <img src="./images/4.jpg" alt="Image 1">
+         <p class="description">"Baby boss in the chair."</p>
+      </div>
+      <div>
+        <img src="./images/5.jpg" alt="Image 1">
+         <p class="description">"Baby boss in the chair."</p>
+      </div>
+      <div>
+        <img src="./images/6.jpg" alt="Image 1">
+         <p class="description">"Baby boss in the chair."</p>
+      </div>
+      <div>
+        <img src="./images/7.jpg" alt="Image 1">
+         <p class="description">"Baby boss in the chair."</p>
+      </div>
+      <div>
+        <img src="./images/8.jpg" alt="Image 1">
+         <p class="description">"Baby boss in the chair."</p>
+      </div>
+      <div>
+        <img src="./images/9.jpg" alt="Image 1">
+         <p class="description">"Baby boss in the chair."</p>
+      </div>
+      <div>
+        <img src="./images/10.jpg" alt="Image 1">
+         <p class="description">"Baby boss in the chair."</p>
+      </div>
+      <div>
+        <img src="./images/11.jpg" alt="Image 1">
+         <p class="description">"Baby boss in the chair."</p>
+      </div>
+      <div>
+        <img src="./images/12.jpg" alt="Image 1">
+         <p class="description">"Baby boss in the chair."</p>
+      </div>
+      <div>
+        <img src="./images/13.jpg" alt="Image 1">
+         <p class="description">"Baby boss in the chair."</p>
+      </div>
+      <div>
+        <img src="./images/14.jpg" alt="Image 1">
+         <p class="description">"Baby boss in the chair."</p>
+      </div>
+      <div>
+        <img src="./images/15.jpg" alt="Image 1">
+         <p class="description">"Baby boss in the chair."</p>
+      </div>
+      <div>
+        <img src="./images/16.jpg" alt="Image 1">
+         <p class="description">"Baby boss in the chair."</p>
+      </div>
+      <div>
+        <img src="./images/17.jpg" alt="Image 1">
+         <p class="description">"Baby boss in the chair."</p>
+      </div>
+      <div>
+        <img src="./images/18.jpg" alt="Image 1">
+         <p class="description">"Baby boss in the chair."</p>
+      </div>
+      <div>
+        <img src="./images/19.jpg" alt="Image 1">
+         <p class="description">"Baby boss in the chair."</p>
+      </div>
+      <div>
+        <img src="./images/20.jpg" alt="Image 1">
+         <p class="description">"Baby boss in the chair."</p>
+      </div>
+      <div>
+        <img src="./images/21.jpg" alt="Image 1">
+         <p class="description">"Baby boss in the chair."</p>
+      </div>
+      <div>
+        <img src="./images/22.jpg" alt="Image 1">
+         <p class="description">"Baby boss in the chair."</p>
+      </div>
+      <div>
+        <img src="./images/23.jpg" alt="Image 1">
+         <p class="description">"Baby boss in the chair."</p>
+      </div>
+      <div>
+        <img src="./images/24.jpg" alt="Image 1">
+         <p class="description">"Baby boss in the chair."</p>
+      </div>
+      <div>
+        <img src="./images/25.jpg" alt="Image 1">
+         <p class="description">"Baby boss in the chair."</p>
+      </div>
+      <div>
+        <img src="./images/26.jpg" alt="Image 1">
+         <p class="description">"Baby boss in the chair."</p>
+      </div>
+      <div>
+        <img src="./images/27.jpg" alt="Image 1">
+         <p class="description">"Baby boss in the chair."</p>
+      </div>
+      <div>
+        <img src="./images/28.jpg" alt="Image 1">
+         <p class="description">"Baby boss in the chair."</p>
+      </div>
+      <div>
+        <img src="./images/29.jpg" alt="Image 1">
+         <p class="description">"Baby boss in the chair."</p>
+      </div>
+      <div>
+        <img src="./images/30.jpg" alt="Image 1">
+         <p class="description">"Baby boss in the chair."</p>
+      </div>
+      <div>
+        <img src="./images/31.jpg" alt="Image 1">
+         <p class="description">"Baby boss in the chair."</p>
+      </div>
+      <div>
+        <img src="./images/32.jpg" alt="Image 1">
+         <p class="description">"Baby boss in the chair."</p>
+      </div>
+      <div>
+        <img src="./images/33.jpg" alt="Image 1">
+         <p class="description">"Baby boss in the chair."</p>
+      </div>
+      <div>
+        <img src="./images/34.jpg" alt="Image 1">
+         <p class="description">"Baby boss in the chair."</p>
+      </div>
+      <div>
+        <img src="./images/35.jpg" alt="Image 1">
+         <p class="description">"Baby boss in the chair."</p>
+      </div>
+      <div>
+        <img src="./images/36.jpg" alt="Image 1">
+         <p class="description">"Baby boss in the chair."</p>
+      </div>
+      <div>
+        <img src="./images/37.jpg" alt="Image 1">
+         <p class="description">"Baby boss in the chair."</p>
+      </div>
+      <div>
+        <img src="./images/38.jpg" alt="Image 1">
+         <p class="description">"Baby boss in the chair."</p>
+      </div>
+      <div>
+        <img src="./images/39.jpg" alt="Image 1">
+         <p class="description">"Baby boss in the chair."</p>
+      </div>
+      <div>
+        <img src="./images/40.jpg" alt="Image 1">
+         <p class="description">"Baby boss in the chair."</p>
+      </div>
+      <div>
+        <img src="./images/41.jpg" alt="Image 1">
+         <p class="description">"Baby boss in the chair."</p>
+      </div>
+      <div>
+        <img src="./images/42.jpg" alt="Image 1">
+         <p class="description">"Baby boss in the chair."</p>
+      </div>
+      <div>
+        <img src="./images/43.jpg" alt="Image 1">
+         <p class="description">"Baby boss in the chair."</p>
+      </div>
+      <div>
+        <img src="./images/44.jpg" alt="Image 1">
+         <p class="description">"Baby boss in the chair."</p>
+      </div>
     </div>
   </body>
 </html>
