--- a/gallery.html
+++ b/gallery.html
@@ -109,179 +109,179 @@
       <!-- Add more images as needed -->
       <div>
         <img src="./images/1.jpg" alt="Image 1">
-         <p class="description">"Baby boss in the chair."</p>
+         <p class="description">""Santa Mini-Me"</p>
       </div>
       <div>
         <img src="./images/2.jpg" alt="Image 1">
-         <p class="description">"Baby boss in the chair."</p>
+         <p class="description">"A ray of sunshine in a tiny form."</p>
       </div>
       <div>
         <img src="./images/3.jpg" alt="Image 1">
-         <p class="description">"Baby boss in the chair."</p>
+         <p class="description">"A precious gem, shining bright."</p>
       </div>
       <div>
         <img src="./images/4.jpg" alt="Image 1">
-         <p class="description">"Baby boss in the chair."</p>
+         <p class="description">"A bundle of love, all snuggled up."</p>
       </div>
       <div>
         <img src="./images/5.jpg" alt="Image 1">
-         <p class="description">"Baby boss in the chair."</p>
+         <p class="description">"The cutest thing you'll see all day."</p>
       </div>
       <div>
         <img src="./images/6.jpg" alt="Image 1">
-         <p class="description">"Baby boss in the chair."</p>
+         <p class="description">"A little angel, sent from above."</p>
       </div>
       <div>
         <img src="./images/7.jpg" alt="Image 1">
-         <p class="description">"Baby boss in the chair."</p>
+         <p class="description">"A tiny miracle, making the world a better place."</p>
       </div>
       <div>
         <img src="./images/8.jpg" alt="Image 1">
-         <p class="description">"Baby boss in the chair."</p>
+         <p class="description">"A heart-melting bundle of joy."</p>
       </div>
       <div>
         <img src="./images/9.jpg" alt="Image 1">
-         <p class="description">"Baby boss in the chair."</p>
+         <p class="description">"A precious little flower, blooming with cuteness."</p>
       </div>
       <div>
         <img src="./images/10.jpg" alt="Image 1">
-         <p class="description">"Baby boss in the chair."</p>
+         <p class="description">"A sweet little princess, stealing hearts."</p>
       </div>
       <div>
         <img src="./images/11.jpg" alt="Image 1">
-         <p class="description">"Baby boss in the chair."</p>
+         <p class="description">"A charming little miss, with a smile so bright."</p>
       </div>
       <div>
         <img src="./images/12.jpg" alt="Image 1">
-         <p class="description">"Baby boss in the chair."</p>
+         <p class="description">"A tiny sunshine, spreading warmth and happiness."</p>
       </div>
       <div>
         <img src="./images/13.jpg" alt="Image 1">
-         <p class="description">"Baby boss in the chair."</p>
+         <p class="description">"A tiny treasure, worth more than gold."</p>
       </div>
       <div>
         <img src="./images/14.jpg" alt="Image 1">
-         <p class="description">"Baby boss in the chair."</p>
+         <p class="description">"A pint-sized bundle of joy and laughter."</p>
       </div>
       <div>
         <img src="./images/15.jpg" alt="Image 1">
-         <p class="description">"Baby boss in the chair."</p>
+         <p class="description">"A little darling, with a twinkle in her eye."</p>
       </div>
       <div>
         <img src="./images/16.jpg" alt="Image 1">
-         <p class="description">"Baby boss in the chair."</p>
+         <p class="description">"A tiny cutie, with a heart of gold."</p>
       </div>
       <div>
         <img src="./images/17.jpg" alt="Image 1">
-         <p class="description">"Baby boss in the chair."</p>
+         <p class="description">"A little gem, shining with innocence and charm."</p>
       </div>
       <div>
         <img src="./images/18.jpg" alt="Image 1">
-         <p class="description">"Baby boss in the chair."</p>
+         <p class="description">"A tiny star, shining bright with promise."</p>
       </div>
       <div>
         <img src="./images/19.jpg" alt="Image 1">
-         <p class="description">"Baby boss in the chair."</p>
+         <p class="description">"A precious little lady, with a smile that lights up the room."</p>
       </div>
       <div>
         <img src="./images/20.jpg" alt="Image 1">
-         <p class="description">"Baby boss in the chair."</p>
+         <p class="description">"A little missy, full of joy and cheer."</p>
       </div>
       <div>
         <img src="./images/21.jpg" alt="Image 1">
-         <p class="description">"Baby boss in the chair."</p>
+         <p class="description">"A miniature bundle of love, wrapped in a bow."</p>
       </div>
       <div>
         <img src="./images/22.jpg" alt="Image 1">
-         <p class="description">"Baby boss in the chair."</p>
+         <p class="description">"A tiny heart-warmer, spreading joy wherever she goes."</p>
       </div>
       <div>
         <img src="./images/23.jpg" alt="Image 1">
-         <p class="description">"Baby boss in the chair."</p>
+         <p class="description">"A miniature ball of energy, always on the go."</p>
       </div>
       <div>
         <img src="./images/24.jpg" alt="Image 1">
-         <p class="description">"Baby boss in the chair."</p>
+         <p class="description">"A little sweetheart, with a personality as big as her smile."</p>
       </div>
       <div>
         <img src="./images/25.jpg" alt="Image 1">
-         <p class="description">"Baby boss in the chair."</p>
+         <p class="description">"A tiny treasure, with a heart of pure gold."</p>
       </div>
       <div>
         <img src="./images/26.jpg" alt="Image 1">
-         <p class="description">"Baby boss in the chair."</p>
+         <p class="description">"A little joy-bringer, making everyone smile."</p>
       </div>
       <div>
         <img src="./images/27.jpg" alt="Image 1">
-         <p class="description">"Baby boss in the chair."</p>
+         <p class="description">"A precious little girl, with a smile that warms the heart."</p>
       </div>
       <div>
         <img src="./images/28.jpg" alt="Image 1">
-         <p class="description">"Baby boss in the chair."</p>
+         <p class="description">"A little darling, with a giggle that can light up the world."</p>
       </div>
       <div>
         <img src="./images/29.jpg" alt="Image 1">
-         <p class="description">"Baby boss in the chair."</p>
+         <p class="description">"A tiny cutie, with a grin as wide as her eyes."</p>
       </div>
       <div>
         <img src="./images/30.jpg" alt="Image 1">
-         <p class="description">"Baby boss in the chair."</p>
+         <p class="description">"A little bundle of joy, always up for a hug."</p>
       </div>
       <div>
         <img src="./images/31.jpg" alt="Image 1">
-         <p class="description">"Baby boss in the chair."</p>
+         <p class="description">"A tiny spark, igniting joy and happiness wherever she goes."</p>
       </div>
       <div>
         <img src="./images/32.jpg" alt="Image 1">
-         <p class="description">"Baby boss in the chair."</p>
+         <p class="description">"A little angel, spreading love and kindness with every giggle."</p>
       </div>
       <div>
         <img src="./images/33.jpg" alt="Image 1">
-         <p class="description">"Baby boss in the chair."</p>
+         <p class="description">"A tiny bundle of laughter, brightening up the day."</p>
       </div>
       <div>
         <img src="./images/34.jpg" alt="Image 1">
-         <p class="description">"Baby boss in the chair."</p>
+         <p class="description">"A little miss sunshine, with a smile as warm as the sun."</p>
       </div>
       <div>
         <img src="./images/35.jpg" alt="Image 1">
-         <p class="description">"Baby boss in the chair."</p>
+         <p class="description">"A tiny ray of hope, shining bright for all to see."</p>
       </div>
       <div>
         <img src="./images/36.jpg" alt="Image 1">
-         <p class="description">"Baby boss in the chair."</p>
+         <p class="description">"A little lady, full of grace and beauty."</p>
       </div>
       <div>
         <img src="./images/37.jpg" alt="Image 1">
-         <p class="description">"Baby boss in the chair."</p>
+         <p class="description">"A precious little gift, bringing joy to all who see her."</p>
       </div>
       <div>
         <img src="./images/38.jpg" alt="Image 1">
-         <p class="description">"Baby boss in the chair."</p>
+         <p class="description">"A tiny wonder, always making us smile."</p>
       </div>
       <div>
         <img src="./images/39.jpg" alt="Image 1">
-         <p class="description">"Baby boss in the chair."</p>
+         <p class="description">"A little love bug, always giving hugs and kisses."</p>
       </div>
       <div>
         <img src="./images/40.jpg" alt="Image 1">
-         <p class="description">"Baby boss in the chair."</p>
+         <p class="description">"A precious little angel, always making the world a happier place."</p>
       </div>
       <div>
         <img src="./images/41.jpg" alt="Image 1">
-         <p class="description">"Baby boss in the chair."</p>
+         <p class="description">"Adorable baby giggling while playing with toys."</p>
       </div>
       <div>
         <img src="./images/42.jpg" alt="Image 1">
-         <p class="description">"Baby boss in the chair."</p>
+         <p class="description">"Baby taking their first steps with mom's support."</p>
       </div>
       <div>
         <img src="./images/43.jpg" alt="Image 1">
-         <p class="description">"Baby boss in the chair."</p>
+         <p class="description">"Cute baby sleeping peacefully in their crib."</p>
       </div>
       <div>
         <img src="./images/44.jpg" alt="Image 1">
-         <p class="description">"Baby boss in the chair."</p>
+         <p class="description">"Baby playing with colorful blocks, building their imagination."</p>
       </div>
     </div>
   </body>
