--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
                 </div>
                 <div class="col-md-6">
                     <h1 class="h2">Elham Hashir</h1>
-                    <p>Meet Little Miss Cutie Pie! She's just a few moons old and already stealing hearts with her giggles and adorable coos.<br> Her hobbies include sleeping, eating, and being the center of attention. She's got some impressive skills too, like crying on cue, blowing spit bubbles, and giving the best cuddles.
+                    <p>Meet Little Miss Cutie Pie! She's just a few moons old and already stealing hearts with her giggles and adorable coos.<br><br> Her hobbies include sleeping, eating, and being the center of attention. She's got some impressive skills too, like crying on cue, blowing spit bubbles, and giving the best cuddles.
 
 Little Miss Cutie Pie loves her booboos, pacifiers, and of course, all the love and affection she can get. On the flip side, she dislikes dirty diapers, being hungry, and not getting enough attention.<p>&nbsp;</p>
 
